# JanAdhikar

./: .gitignore  .gitmodules  ARCHITECTURE.md  COGNEE.md  CONTRIBUTING.md  KNOWLEDGE.md  README.md  build.gradle.kts  gradle.properties  knowledge_database.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.janadhikar.memory.KnowledgeDatabase/: 1.json
app/src/androidTest/kotlin/com/janadhikar/: FullPipelineTest.kt
app/src/androidTest/kotlin/com/janadhikar/ui/: UiStatesTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/db/: janadhikar_knowledge.db.sha256
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/llama/: llama_jni.cpp
app/src/main/cpp/sqlitevec/: sqlite_vec_jni.cpp
app/src/main/cpp/whisper/: whisper_jni.cpp
app/src/main/kotlin/com/janadhikar/: JanadhikarApp.kt  MainActivity.kt
app/src/main/kotlin/com/janadhikar/engine/: ChatEngine.kt  Conversation.kt  ConversationStore.kt  CorpusSummary.kt  CpuFeatures.kt  EdgeStack.kt  FollowUp.kt  IncidentEngine.kt  IncidentPipelineService.kt  IncidentState.kt  ModelPreference.kt
app/src/main/kotlin/com/janadhikar/input/: QueryNormalizer.kt
app/src/main/kotlin/com/janadhikar/llm/: GemmaTranslator.kt  LlamaBridge.kt  LlamaTranslator.kt  ModelDownloader.kt  OutputSanitizer.kt  PromptContract.kt
app/src/main/kotlin/com/janadhikar/memory/: ConceptLexicon.kt  CrisisLexicon.kt  DirectReference.kt  HybridRetriever.kt  KnowledgeBaseProvisioner.kt  KnowledgeDao.kt  KnowledgeDatabase.kt  MetaQuestion.kt  MetadataExtractor.kt  QueryEmbedder.kt  SentencePieceTokenizer.kt
app/src/main/kotlin/com/janadhikar/memory/model/: Entities.kt  RetrievalResult.kt
app/src/main/kotlin/com/janadhikar/memory/vec/: SqliteVecBridge.kt
app/src/main/kotlin/com/janadhikar/sos/: SmsDispatcher.kt  SosController.kt
app/src/main/kotlin/com/janadhikar/stt/: AudioCapture.kt  WhisperBridge.kt
app/src/main/kotlin/com/janadhikar/ui/: ActiveScreen.kt  ChatScreen.kt  ConstitutionOverviewScreen.kt  ExplainTextToolbar.kt  HistoryScreen.kt  JanadhikarRoot.kt  PdfViewerScreen.kt  ResolutionScreen.kt  SettingsScreen.kt  TriggerScreen.kt
app/src/main/kotlin/com/janadhikar/ui/components/: CancelSlider.kt  CitationCard.kt  MarkdownText.kt  PulsingMicButton.kt
app/src/main/kotlin/com/janadhikar/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/kotlin/com/janadhikar/engine/: ChatEngineTest.kt  ConversationStoreTest.kt  FollowUpTest.kt  IncidentEngineTest.kt
app/src/test/kotlin/com/janadhikar/input/: HinglishLanguageTest.kt  QueryNormalizerTest.kt
app/src/test/kotlin/com/janadhikar/llm/: GibberishSanitizerTest.kt  OutputSanitizerTest.kt  PromptContractTest.kt
app/src/test/kotlin/com/janadhikar/memory/: CrisisLexiconTest.kt  DirectReferenceTest.kt  HybridRetrieverTest.kt  MetaQuestionTest.kt  MetadataExtractorTest.kt  SentencePieceTokenizerTest.kt
app/src/test/kotlin/com/janadhikar/sos/: SosControllerTest.kt
app/src/test/resources/: tokenizer_vectors.json
gradle/: libs.versions.toml
knowledge-pipeline/: README.md  build_db.py  eval_queries.py  experiment_embed.py  experiment_models.py  export_tflite.py
knowledge-pipeline/corpus/: manifest.json
knowledge-pipeline/pipeline/: extract.py
scripts/: fetch_models.sh  push_models.sh
